<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rl_select_call_bg">


        <RelativeLayout
            android:id="@+id/rl_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_iv_video" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="2dp"
                    android:text="@string/video_call"
                    android:textColor="@color/color_333333"
                    android:textSize="17sp" />

            </LinearLayout>

        </RelativeLayout>


        <View
            android:id="@+id/view_lin_one"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/rl_video"
            android:background="@color/color_e4e4e4" />


        <RelativeLayout
            android:id="@+id/rl_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_lin_one">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_iv_audio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="2dp"
                    android:text="@string/audio_call"
                    android:textColor="@color/color_333333"
                    android:textSize="17sp" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/view_lin_two"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/rl_audio"
            android:background="@color/color_e4e4e4" />


        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/view_lin_two"
            android:layout_centerHorizontal="true"
            android:paddingTop="30dp"
            android:text="@string/cancel"
            android:textColor="@color/color_333333"
            android:textSize="17sp" />
    </RelativeLayout>
</RelativeLayout>
