<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_222328">


    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/tv_call_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="00.05" />


        <ImageView
            android:id="@+id/iv_add_im_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="24dp"
            android:src="@drawable/icon_add_im_user" />


    </RelativeLayout>


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_menu"
        android:layout_below="@+id/rl_title">

        <com.tencent.rtmp.ui.TXCloudVideoView

            android:id="@+id/trtc_local_preview_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            />

        <com.tencent.rtmp.ui.TXCloudVideoView
            android:id="@+id/trtc_local_preview_view2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/trtc_local_preview_view"

            />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_menu"
        android:layout_below="@+id/rl_title"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rl_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:layoutManager="GridLayoutManager"
                tools:listitem="@layout/item_group_video_layout"
                tools:spanCount="2" />
        </RelativeLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/rl_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_close_call"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="20dp">


        <LinearLayout
            android:id="@+id/ll_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_jingying" />

            <TextView
                android:id="@+id/tv_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/im_jingying"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_close_sxt" />

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/im_open_sxt"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_hands_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_hands_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_mianti" />

            <TextView
                android:id="@+id/tv_hands_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/im_mianti"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_close_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_av_guaduan" />


</RelativeLayout>