<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_222328">

    <TextView
        android:id="@+id/tv_show_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/color_FFFFFF"
        android:textSize="22sp"
        tools:text="对方拒绝了你的视频请求" />

    <com.eju.cy.audiovideo.video.videolayout.TRTCVideoLayoutManager

        android:id="@+id/trtc_layout_manager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="15dp">

        <com.noober.background.view.BLImageView
            android:id="@+id/iv_other"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            tools:src="@drawable/icon_yy_guaduan" />


        <TextView
            android:id="@+id/tv_other_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_other"
            android:textColor="@color/color_FFFFFF"
            android:textSize="30sp"
            tools:text="张先生" />

        <TextView
            android:id="@+id/tv_ing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_other_name"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_other"
            android:text="@string/video_call_ing"
            android:textColor="@color/color_FFFFFF"
            android:textSize="16sp" />

    </RelativeLayout>

    <!--主动呼叫部分-->
    <RelativeLayout
        android:id="@+id/rl_initiative_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_switch_audio" />

        <TextView
            android:id="@+id/tv_switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_switch_audio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:text="@string/switch_audio"
            android:textColor="@color/color_FFFFFF"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_switch_audio"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_yy_guaduan" />

            <TextView
                android:id="@+id/tv_close_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="取消"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </RelativeLayout>

    <!--被呼叫部分-->
    <RelativeLayout
        android:id="@+id/rl_be_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/ll_switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_switch_audi1o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_switch_audio" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/switch_audio"
                android:textColor="@color/color_FFFFFF" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_switch_audio"
            android:layout_marginLeft="40dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_cancel"

                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_yy_guaduan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                android:textColor="@color/color_FFFFFF" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_switch_audio"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_answer"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_av_jieting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/video_answer"
                android:textColor="@color/color_FFFFFF" />


        </LinearLayout>


    </RelativeLayout>

    <!--通话中-->


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_in_the_call"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textColor="@color/color_FFFFFF"
        android:textSize="20sp"
        tools:text="00:28" />

    <RelativeLayout
        android:id="@+id/rl_in_the_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/ll_in_the_call_switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_in_the_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_in_the_call_switch_audio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/switch_audio"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_in_the_call_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_in_the_call_close"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_yy_guaduan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/video_hang_up"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_in_the_call_switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_in_the_call_switch_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_switch_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/switch_camera"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


    </RelativeLayout>


    <!--语音-->
    <RelativeLayout
        android:id="@+id/rl_in_the_call_yy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/ll_in_the_call_switch_audio_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_in_the_call_yy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/icon_yy_jy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="静音"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_in_the_call_close_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_in_the_call_close_yy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_yy_guaduan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/video_hang_up"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_in_the_call_switch_camera_yy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_in_the_call_switch_camera_yy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/icon_yy_wf_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_cancel"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="外放"
                android:textColor="@color/color_FFFFFF" />

        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_time">


        <com.noober.background.view.BLImageView
            android:id="@+id/iv_portrait"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:scaleType="fitXY"
            app:bl_corners_radius="5dp" />


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/iv_portrait"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_name"
            android:gravity="center"
            android:text="正在等待对方接受邀请"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>


</RelativeLayout>